# scraper-trail

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: archive.rs  client.rs  exchange.rs  lib.rs  multi_value.rs  store.rs
core/src/archive/: entry.rs  mod.rs  store.rs
core/src/request/: mod.rs  params.rs
examples/: apple-itunes-01.json  google-play-01.json
